--- a/eduVis.html
+++ b/eduVis.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>pattern for two.js</title>
+    <title>Data Visualization</title>
     <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -14,6 +14,12 @@
     body {
       background-color: #ccc;
     }
+
+    .container {
+      width: 720px;
+      margin: 0 auto;
+    }
+
     #stage-canvas {
       max-width: 500px;
       height: 600px;
@@ -21,6 +27,11 @@
     }
     .firstdiv {
       margin-top: 70px;
+    }
+
+    #botones {
+      width: 500px;
+      margin: 0 auto;
     }
 
     </style>
@@ -56,6 +67,17 @@
       </div>
 
       <div id="stage"></div>
+
+      <div id="botones">
+        <div class="btn-group">
+          <button type="button" class="btn btn-default">Hometown</button>
+          <button type="button" class="btn btn-default">Close</button>
+          <button type="button" class="btn btn-default">Mah o menoh</button>
+          <button type="button" class="btn btn-default">Lejos CC</button>
+        </div>
+      </div>
+
+
 
     </div><!-- /.container -->
 
