--- a/eduVis.html
+++ b/eduVis.html
@@ -3,16 +3,17 @@
   <head>
     <title>Data Visualization</title>
     <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-
+    <link href="custom.css" rel="stylesheet">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.2/raphael-min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800' rel='stylesheet' type='text/css'>
 
     <!-- this is just some css code. -->
     <style>
 
     body {
-      background-color: #ccc;
+      background-color: #fff;
     }
 
     .container {
@@ -47,13 +48,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">PR EduVis</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -61,12 +61,12 @@
 
     <div class="container">
 
-      <div class="firstdiv">
-        <h1>Bootstrap starter template</h1>
+      <div class="title">
+        <h1>Distance from Home vs. GPA</h1>
+        <div id="stage"></div>
         <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
       </div>
 
-      <div id="stage"></div>
 
       <div id="botones">
         <div class="btn-group">
