adding custom.css

--- a/eduVis.html
+++ b/eduVis.html
@@ -9,33 +9,6 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800' rel='stylesheet' type='text/css'>
 
-    <!-- this is just some css code. -->
-    <style>
-
-    body {
-      background-color: #fff;
-    }
-
-    .container {
-      width: 720px;
-      margin: 0 auto;
-    }
-
-    #stage-canvas {
-      max-width: 500px;
-      height: 600px;
-      margin: 0 auto;
-    }
-    .firstdiv {
-      margin-top: 70px;
-    }
-
-    #botones {
-      width: 500px;
-      margin: 0 auto;
-    }
-
-    </style>
   </head>
   <body>
 
@@ -64,7 +37,6 @@
       <div class="title">
         <h1>Distance from Home vs. GPA</h1>
         <div id="stage"></div>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
       </div>
 
 
@@ -77,8 +49,9 @@
         </div>
       </div>
 
-
-
+    <div class="explanation">
+      <p class="lead">This data is sourced from the open data portal on PR.gov<br> It was last updated May 2020</p>
+    </div>
     </div><!-- /.container -->
 
 
